working angular sample

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html ng-app="minApp">
+
 <head>
   <meta charset="UTF-8">
   <title>Mnimal Angular typescript sample</title>
 </head>
+
 <body ng-controller="HomeController">
 
+  <h1>{{greeting}}</h1>
+
+  <script src="angular.js" charset="utf-8"></script>
+  <script src="app.js" charset="utf-8"></script>
 </body>
+
 </html>
